# incubator-gluten

./: .asf.yaml  .clang-format  .gitattributes  .gitignore  .gitmodules  .scalafmt.conf  CHANGELOG.md  CONTRIBUTING.md  CPP_CODING_STYLE.md  DISCLAIMER  DISCLAIMER-WIP  LICENSE  LICENSE-binary  Makefile  NOTICE  NOTICE-binary  RAS_FALLBACK_TAG_PROPAGATION_BUG_REPRODUCTION.md  README.md  TPP.txt  build.gradle.kts  cloud-test-version.md  gradle.properties  gradlew  gradlew.bat  mkdocs.yml  pom.diff  pom.xml  scalastyle-config.xml  settings.gradle.kts  suite_mapping_report_spark40.md  suite_mapping_report_spark41.md  wq
cpp/: .clang-tidy  CMakeLists.txt  bolt.CMakeLists.cmake  build  compile.sh  conanfile.py  perf.data.old  run-clang-tidy.py
cpp-ch/: .clang-format  CMakeLists.txt  README.md  clickhouse.version
cpp-ch/cmake/: default-libs.cmake  toolchain-x86_64.cmake
cpp-ch/cmake/cxx/: CMakeLists.txt
cpp-ch/cmake/cxxabi/: CMakeLists.txt
cpp-ch/local-engine/: CMakeLists.txt  compile_commands.json  gluten_version.h.in  libch-hide-jemalloc.map  libch.map  local_engine_jni.cpp
cpp-ch/local-engine/AggregateFunctions/: AggregateFunctionDVRoaringBitmap.cpp  AggregateFunctionDVRoaringBitmap.h  AggregateFunctionGroupBloomFilter.cpp  AggregateFunctionGroupBloomFilter.h  AggregateFunctionPartialMerge.cpp  AggregateFunctionPartialMerge.h  AggregateFunctionSparkArrayFold.cpp  AggregateFunctionSparkAvg.cpp  AggregateFunctionUniqHyperLogLogPlusPlus.cpp  AggregateFunctionUniqHyperLogLogPlusPlus.h  GroupLimitFunctions.cpp  WindowGroupLimitFunctions.cpp  WindowGroupLimitFunctions.h
cpp-ch/local-engine/Builder/: BroadCastJoinBuilder.cpp  BroadCastJoinBuilder.h  SerializedPlanBuilder.cpp  SerializedPlanBuilder.h
cpp-ch/local-engine/Columns/: DecodedJSONColumn.h  FormattedColumn.h
cpp-ch/local-engine/Common/: AggregateUtil.cpp  AggregateUtil.h  ArrayJoinHelper.cpp  ArrayJoinHelper.h  Base85Codec.cpp  Base85Codec.h  BlockIterator.cpp  BlockIterator.h  BlockTypeUtils.cpp  BlockTypeUtils.h  CHUtil.cpp  CHUtil.h  ChunkBuffer.cpp  ChunkBuffer.h  ConcurrentMap.h  Config.h  DebugUtils.cpp  DebugUtils.h  ExceptionUtils.cpp  ExceptionUtils.h  FileCacheConcurrentMap.h  GlutenConfig.cpp  GlutenConfig.h  GlutenDecimalUtils.h  GlutenSettings.cpp  GlutenSettings.h  GlutenSignalHandler.cpp  GlutenSignalHandler.h  GlutenStringUtils.cpp  GlutenStringUtils.h  JNIUtils.cpp  JNIUtils.h  JoinHelper.cpp  JoinHelper.h  Logger.cpp  Logger.h  LoggerExtend.cpp  LoggerExtend.h  MergeTreeTool.cpp  MergeTreeTool.h  (+8 more)
cpp-ch/local-engine/Disks/: registerGlutenDisks.cpp  registerGlutenDisks.h
cpp-ch/local-engine/Functions/: AggregateFunctionSparkArrayFold.cpp  ArabicIndicToAsciiDigitForDate.cpp  CMakeLists.txt  DecodeJSONStringFunction.cpp  FunctionGetDateData.h  FunctionGetJsonObject.cpp  FunctionGetJsonObject.h  FunctionGreatestLeast.h  FunctionIfInfinite.cpp  FunctionsBloomFilter.cpp  FunctionsBloomFilter.h  FunctionsHashingExtended.h  FunctionsRoundHalfUp.cpp  FunctionsRoundHalfUp.h  LocalDigitsToAsciiDigitForDate.cpp  SparkArrayFlatten.cpp  SparkCastComplexTypesToString.cpp  SparkCastComplexTypesToString.h  SparkDateTime.cpp  SparkFunctionArrayDistinct.cpp  SparkFunctionArrayJoin.cpp  SparkFunctionArraySlice.cpp  SparkFunctionArraySort.cpp  SparkFunctionArraySort.h  SparkFunctionArrayToString.cpp  SparkFunctionArrayToString.h  SparkFunctionArraysOverlap.cpp  SparkFunctionBin.cpp  SparkFunctionBinaryArithmetic.cpp  SparkFunctionCastFloatToInt.cpp  SparkFunctionCastFloatToInt.h  SparkFunctionCastFloatToString.cpp  SparkFunctionCheckDecimalOverflow.cpp  SparkFunctionCheckDecimalOverflow.h  SparkFunctionConv.cpp  SparkFunctionConv.h  SparkFunctionDateFromUnixDate.cpp  SparkFunctionDateFromUnixDate.h  SparkFunctionDateToUnixTimestamp.cpp  SparkFunctionDateToUnixTimestamp.h  (+61 more)
cpp-ch/local-engine/IO/: SplittableBzip2ReadBuffer.cpp  SplittableBzip2ReadBuffer.h
cpp-ch/local-engine/Join/: BroadCastJoinBuilder.cpp  BroadCastJoinBuilder.h  BroadcastJoinBuilder.cpp  BroadcastJoinBuilder.h  StorageJoinFromReadBuffer.cpp  StorageJoinFromReadBuffer.h
cpp-ch/local-engine/Operator/: AdvancedExpandStep.cpp  AdvancedExpandStep.h  BlockCoalesceOperator.cpp  BlockCoalesceOperator.h  BlocksBufferPoolTransform.cpp  BlocksBufferPoolTransform.h  BranchStep.cpp  BranchStep.h  BranchTransform.cpp  BranchTransform.h  DefaultHashAggregateResult.cpp  DefaultHashAggregateResult.h  EarlyStopStep.cpp  EarlyStopStep.h  EmptyHashAggregate.cpp  EmptyHashAggregate.h  EmptyProjectStep.cpp  EmptyProjectStep.h  ExpandStep.cpp  ExpandStep.h  ExpandTransform.cpp  ExpandTransform.h  ExpandTransorm.h  FillingDeltaInternalRowDeletedStep.cpp  FillingDeltaInternalRowDeletedStep.h  GraceAggregatingStep.cpp  GraceAggregatingStep.h  GraceAggregatingTransform.cpp  GraceAggregatingTransform.h  GraceMergingAggregatedStep.cpp  GraceMergingAggregatedStep.h  PartitionColumnFillingTransform.cpp  PartitionColumnFillingTransform.h  ReplicateRowsStep.cpp  ReplicateRowsStep.h  SortSingleBlockStep.cpp  SortSingleBlockStep.h  StreamingAggregatingStep.cpp  (+3 more)
cpp-ch/src/: local_engine_jni.cpp
cpp-ch/tests/: CMakeLists.txt  benchmark_local_engine.cpp  example_gtest_ch_join.cpp  example_gtest_ch_storages.cpp  example_gtest_local_engine.cpp  gtest_main.cpp  gtest_orc_input_format.cpp  gtest_parquet_read.cpp  testConfig.h.in
cpp/CMake/: BuildArrow.cmake  BuildGTest.cmake  BuildGflags.cmake  BuildGlog.cmake  BuildGoogleBenchmark.cmake  BuildMemkind.cmake  BuildQATZSTD.cmake  BuildQATZstd.cmake  BuildQATzip.cmake  BuildQpl.cmake  BuildZstd.cmake  Buildjemalloc.cmake  Buildjemalloc_pic.cmake  ConfigArrow.cmake  FindAvroCpp.cmake  FindZstd.cmake  Findfolly.cmake  Findgflags.cmake  Findglog.cmake  Findjemalloc.cmake  Findjemalloc_pic.cmake  ResolveDependency.cmake  Simdjson.cmake  simdjson.cmake
cpp/bolt/: CMakeLists.txt  bolt-build-info.sh  symbols.map
cpp/core/: CMakeLists.txt  bolt.CMakeLists.cmake  symbols.map  symbols.txt  t.py
cpp/gazelle/: CMakeLists.txt
cpp/gazelle-cpp/: .deprecated  CMakeLists.txt
cpp/src/: CMakeLists.txt
cpp/velox/: CMakeLists.txt  symbols.map
(+10189 files in other folders)
